sql/test/unit/checks/aggr_just_check_fail.exp
create table if not exists aggr(g integer, x integer);
delete from aggr;
insert into aggr values (0,0), (0,1), (0,2), (1,0);
SELECT CHECK(count(*) > 1) from aggr group by g;
^
|
 ----- ERROR
Error: line 4, character 0:
Failed constraint: count() > 1
